--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "Get notified when a DOM element enters or exits the viewport.",
   "main": "dist/in-view.min.js",
   "scripts": {
-      "start": "webpack -wp",
-      "build": "webpack -p"
+    "start": "NODE_ENV=production webpack -wp",
+    "build": "NODE_ENV=production webpack -p"
   },
   "babel": {
-    "presets": ["es2015"]  
+    "presets": [
+      "es2015"
+    ]
   },
   "author": "Cam Wiegert <cam@camwiegert.com>",
   "homepage": "https://camwiegert.github.io/in-view",
@@ -18,5 +20,8 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "webpack": "^1.13.1"
+  },
+  "dependencies": {
+    "lodash": "^4.14.2"
   }
 }
