--- a/package.json
+++ b/package.json
@@ -5,12 +5,24 @@
   "main": "dist/in-view.min.js",
   "scripts": {
     "start": "NODE_ENV=production webpack -wp",
-    "build": "NODE_ENV=production webpack -p"
+    "build": "NODE_ENV=production webpack -p",
+    "lint": "eslint src/**/*.js"
   },
   "babel": {
     "presets": [
       "es2015"
     ]
+  },
+  "eslintConfig": {
+      "extends": "eslint:recommended",
+      "env": {
+        "browser": true,
+        "node": true
+      },
+      "parserOptions": {
+        "ecmaVersion": 6,
+        "sourceType": "module"
+      }
   },
   "author": "Cam Wiegert <cam@camwiegert.com>",
   "homepage": "https://camwiegert.github.io/in-view",
@@ -19,6 +31,7 @@
     "babel-core": "^6.11.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
+    "eslint": "^3.3.1",
     "webpack": "^1.13.1"
   },
   "dependencies": {
