--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production webpack -wp",
     "build": "NODE_ENV=production webpack -p",
+    "prebuild": "npm run lint",
     "lint": "eslint src/**/*.js"
   },
   "babel": {
