--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "start": "NODE_ENV=production webpack -wp",
     "build": "NODE_ENV=production webpack -p",
-    "prepublish": "npm run lint",
-    "prebuild": "npm run lint",
+    "prepublish": "npm run lint && npm run test",
     "lint": "eslint src/**/*.js",
     "test": "ava -v"
   },
