--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "NODE_ENV=production webpack -p",
     "prepublish": "npm run lint && npm run test",
     "lint": "eslint src/**/*.js",
-    "test": "ava -v"
+    "test": "ava -v",
+    "start-docs": "NODE_ENV=production webpack -wp --config ./docs/docs.webpack.config.js"
   },
   "ava": {
     "files": [
