--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "prepublish": "npm run lint && npm run test",
     "lint": "eslint src/**/*.js",
     "test": "ava -v",
-    "start-docs": "NODE_ENV=production webpack -wp --config ./docs/docs.webpack.config.js"
+    "docs-start": "npm run -s docs-server & npm run -s docs-js & npm run -s docs-css",
+    "docs-server": "http-server ./docs -o",
+    "docs-js": "NODE_ENV=production webpack -wp --config ./docs/docs.webpack.config.js",
+    "docs-css": "node-sass -w --output-style=compressed ./docs/lib/css/main.scss ./docs/lib/css/main.min.css"
   },
   "ava": {
     "files": [
@@ -46,6 +49,8 @@
     "babel-preset-es2015": "^6.9.0",
     "babel-register": "^6.11.6",
     "eslint": "^3.3.1",
+    "http-server": "^0.9.0",
+    "node-sass": "^3.8.0",
     "webpack": "^1.13.1"
   },
   "dependencies": {
