--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "in-view",
   "version": "0.4.2",
   "description": "Get notified when a DOM element enters or exits the viewport.",
+  "repository": "https://github.com/camwiegert/in-view",
   "main": "dist/in-view.min.js",
   "scripts": {
     "start": "NODE_ENV=production webpack -wp",
