--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "in-view",
-  "version": "0.3.0",
+  "version": "0.3.1",
   "description": "Get notified when a DOM element enters or exits the viewport.",
   "main": "dist/in-view.min.js",
   "scripts": {
@@ -47,6 +47,9 @@
   "author": "Cam Wiegert <cam@camwiegert.com>",
   "homepage": "https://camwiegert.github.io/in-view",
   "license": "MIT",
+  "dependencies": {
+    "lodash": "^4.15.0"
+  },
   "devDependencies": {
     "ava": "^0.16.0",
     "babel-core": "^6.14.0",
@@ -57,7 +60,6 @@
     "eslint": "^3.3.1",
     "http-server": "^0.9.0",
     "jsdom": "^9.4.2",
-    "lodash": "^4.15.0",
     "lodash-webpack-plugin": "^0.10.0",
     "node-sass": "^3.8.0",
     "weakmap-shim": "^1.1.0",
